tests/miniJava/pos/001042_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( this ) if ( 0 ) { } else { } else java [ 0 ] = 0 ; } }
