tests/miniJava/neg/002934_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = this else ; } }
